Modi: fixing main menu search bar missing background issue

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,22 @@ a :hover, .link :hover {
   color: red;
 }
 
+@media (max-width: 1199px) {
+  header#header nav#navbar-main ul.nav.navbar-nav.container[container-type=desktop] {
+    display: none;
+  }
+  header#header nav#navbar-main ul.nav.navbar-nav.container[container-type=mobile] {
+    display: flex;
+  }
+}
+@media (min-width: 1200px) {
+  header#header nav#navbar-main ul.nav.navbar-nav.container[container-type=desktop] {
+    display: flex;
+  }
+  header#header nav#navbar-main ul.nav.navbar-nav.container[container-type=mobile] {
+    display: none;
+  }
+}
 @media (min-width: 1200px) {
   header#header nav#navbar-main {
     display: flex;
@@ -456,6 +472,35 @@ div#block-igis-searchform form#search-block-form div.form-actions input:hover {
   }
   #block-igis-main-navigation {
     margin-top: 60px;
+  }
+}
+@media (min-width: 1200px) {
+  div#block-igis-searchform {
+    overflow: hidden;
+  }
+  #block-igis-main-navigation + div {
+    position: relative;
+  }
+  #block-igis-main-navigation + div::before {
+    height: 100%;
+    width: 100vw;
+    position: absolute;
+    display: block;
+    background: #255256;
+    content: "";
+    font-size: 25px;
+    z-index: 1;
+    background: #255257;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  #block-igis-main-navigation + div::before {
+    left: calc((100vw - 1116px) / 2 * -1 + 12px);
+  }
+}
+@media (min-width: 1400px) {
+  #block-igis-main-navigation + div::before {
+    left: calc((100vw - 1296px) / 2 * -1 + 12px);
   }
 }
 footer.site-footer {
